...
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clipsSubviews="YES" contentMode="scaleToFill" id="JAa-Zy-A93" customClass="BeerDetailsView" customModule="spay" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="618" height="500"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    <rect key="frame" x="0.0" y="0.0" width="618" height="500"/>
                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="TopOverlay"/>
                    <gestureRecognizers/>
                    <connections>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyu-ma-Hib">
                                            <rect key="frame" x="0.0" y="0.0" width="42" height="24"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerName"/>
                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tagline" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0d7-Ko-81j">
                                            <rect key="frame" x="0.0" y="26" width="493" height="23"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerTagline"/>
                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="19"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPb-d6-Age">
                                            <rect key="frame" x="0.0" y="64" width="86.5" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerDescription"/>
                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Malts" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zD6-Us-B2V">
                                            <rect key="frame" x="0.0" y="99.5" width="41.5" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerMalts"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hops" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WET-B8-aOU">
                                            <rect key="frame" x="0.0" y="135" width="40.5" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerHops"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yeast" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N1N-eD-2hB">
                                            <rect key="frame" x="0.0" y="170.5" width="42" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="BeerYeast"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    </subviews>
                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <accessibility key="accessibilityConfiguration" identifier="ContentView"/>
                                    <constraints>
                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WET-B8-aOU" secondAttribute="trailing" constant="15" id="4Ua-pF-bTe"/>
...
                            </constraints>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ScrollView"/>
                            </userDefinedRuntimeAttributes>
                        </scrollView>
...
                    </subviews>
                    <color key="backgroundColor" name="BackgroundGrey"/>
                    <accessibility key="accessibilityConfiguration" identifier="DetailsView"/>
                    <constraints>
                        <constraint firstAttribute="bottom" secondItem="R0H-PP-FAB" secondAttribute="bottom" constant="20" id="KWk-sl-EG9"/>
...
