...
                            <constraint firstAttribute="width" constant="40" id="0zB-fg-qXg"/>
                            <constraint firstAttribute="height" constant="150" id="k5r-nN-yru"/>
                        </constraints>
                    </imageView>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Beer name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9G-U9-cXP">
                        <rect key="frame" x="80" y="15" width="87" height="20.5"/>
                        <accessibility key="accessibilityConfiguration" identifier="Name"/>
                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Tagline" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yo-kT-h54">
                        <rect key="frame" x="80" y="37.5" width="51" height="20"/>
...
                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Vt-qf-SSh">
                        <rect key="frame" x="80" y="132" width="91" height="33"/>
                        <accessibility key="accessibilityConfiguration" identifier="MoreInfoButton"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <state key="normal" title="MORE INFO">
                            <color key="titleColor" name="BackGroundOrange"/>
                        </state>
                        <connections>
                            <action selector="showMore" destination="KGk-i7-Jjw" eventType="touchUpInside" id="248-7L-QsF"/>
...
