...
                            </collectionView>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kro-lN-FPW">
                                <rect key="frame" x="0.0" y="228" width="414" height="546"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <sections/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="BeersTableView"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                            <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3jY-X9-eCc" userLabel="Details View">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="BeerDetailsView"/>
                            </view>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="BackGroundDarkBlue"/>
                        <accessibility key="accessibilityConfiguration" identifier="BeerListViewController"/>
                        <constraints>
                            <constraint firstItem="qKM-y2-T1z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="0eC-K4-F4Y"/>
                            <constraint firstItem="kro-lN-FPW" firstAttribute="top" secondItem="7wA-HB-uZ2" secondAttribute="bottom" constant="15" id="G8a-M4-QRh"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Bmk-uo-uTq" secondAttribute="trailing" constant="16" id="HX4-Kt-zFd"/>
                            <constraint firstItem="kro-lN-FPW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LNj-OD-jHh"/>
                            <constraint firstItem="Bmk-uo-uTq" firstAttribute="top" secondItem="qKM-y2-T1z" secondAttribute="bottom" constant="15" id="NFf-N0-uAS"/>
...
